--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,4 +26,23 @@ jobs:
           python -m pip install -U pip
           python -m pip install -r requirements.txt
 
+      - name: configure gcp credentials
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: ${{ env.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ env.GCP_SERVICE_ACCOUNT }}
+
+      - name: auth docker
+        run: gcloud --quiet auth configure-docker us-east4-docker.pkg.dev
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:${{github.run_number}}
+      
+      - name: Push to artifact registry
+        run: |
+          docker push us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:${{github.run_number}}
+          gcloud container images add-tag us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:${{github.run_number}} us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:latest
       
