--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,10 +36,8 @@ jobs:
         run: gcloud --quiet auth configure-docker us-east4-docker.pkg.dev
       
       - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: false
-          tags: us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:${{github.run_number}}
+        run: |
+          docker build --network=host --file Dockerfile --tag "us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/fastapi:${{github.run_number}}"
       
       - name: Push to artifact registry
         run: |
