--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,14 +17,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      #- name: Setup Python
+      #  uses: actions/setup-python@v5
       
-      - name: Install Dependencies
-        run: |
-          cd content
-          python -m pip install -U pip
-          python -m pip install -r requirements.txt
+      #- name: Install Dependencies
+      #  run: |
+      #    cd content
+      #    python -m pip install -U pip
+      #    python -m pip install -r requirements.txt
 
       - name: configure gcp credentials
         uses: google-github-actions/auth@v1
