--- a/content/.github/workflows/build.yaml
+++ b/content/.github/workflows/build.yaml
@@ -5,10 +5,8 @@ on:
     branches: main
 
 env:
-  GCP_WORKLOAD_IDENTITY_PROVIDER: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-  GCP_SERVICE_ACCOUNT: ${{ vars.GCP_SERVICE_ACCOUNT }}
   CLOUDRUN_SERVICE_NAME: ${{ values.cloudrun_service_name }}
-  
+
 {% raw %}
 concurrency:
   group: ${{ github.ref }}
@@ -30,8 +28,8 @@ jobs:
       - name: configure gcp credentials
         uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: ${{ env.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ env.GCP_SERVICE_ACCOUNT }}
+          workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ vars.GCP_SERVICE_ACCOUNT }}
 
       - name: auth docker
         run: gcloud --quiet auth configure-docker us-east4-docker.pkg.dev
