--- a/content/.github/workflows/build.yaml
+++ b/content/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       
       - name: Build and push
         run: |
-          docker build --tag "us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/${{ env.CLOUDRUN_SERVICE_NAME }}:${{github.run_number}}" --file .
+          docker build --tag "us-east4-docker.pkg.dev/png-gcp-learning-poc/python-fastapi/${{ env.CLOUDRUN_SERVICE_NAME }}:${{github.run_number}}" .
       
       - name: Push to artifact registry
         run: |
