--- a/content/Dockerfile
+++ b/content/Dockerfile
@@ -16,8 +16,8 @@ RUN pip install -r requirements.txt
 COPY . .
 
 # Expose the port on which the FastAPI app will run
-ENV PORT=8000
+ENV PORT=8080
 EXPOSE $PORT
 
 # Set the command to run the uvicorn server at 8080 port.
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", $PORT]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
